examples/fail/from_import_private_symbol.hax
module Fail::FromImportPrivateSymbol;

from ZZZ::HasExports import Hidden;

sub main() -> Int {
  return 0;
}
